name:                nn-sample
version:             0.1.0.0
synopsis:            Neural Network Sample Program
description:         Neural Network Sample Program
license:             MIT
license-file:        LICENSE
author:              IMOKURI
maintainer:          nenegi.01mo@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable nn-sample
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8
                     , LambdaNet
                     , hmatrix
                     , random
  hs-source-dirs:      src
  default-language:    Haskell2010
